--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,156 @@
-*{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    outline: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
-:root{
-    --color-primary:#6c63ff;
-    --color-sucess:#00bf8e;
-    --color-warning:#f7c94b;
-    --color-danger:#f75842;
-    --color-primary-variant:rgba(247,88,66,0.4);
-    --color-white:white;
-    --color-light:rgba(255,255,255,0.7);
-    --color-black:black;
-    --color-bg:#1f2641;
-    --color-bg1:#2e3267;
-    --color-bg2:#424890;
+:root {
+  --color-primary: #6c63ff;
+  --color-sucess: #00bf8e;
+  --color-warning: #f7c94b;
+  --color-danger: #f75842;
+  --color-primary-variant: rgba(247, 88, 66, 0.4);
+  --color-white: white;
+  --color-light: rgba(255, 255, 255, 0.7);
+  --color-black: black;
+  --color-bg: #1f2641;
+  --color-bg1: #2e3267;
+  --color-bg2: #424890;
 
+  --container-width-lg: 76%;
+  --container-width-md: 90%;
+  --container-width-sm: 94%;
 
-    --container-width-lg:76%;
-    --container-width-md:90%;
-    --container-width-sm:94%;
-
-    --transition: all 400ms ease;
+  --transition: all 400ms ease;
 }
-body{
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.7;
-    color: var(--color-white);
-    background:var(--color-bg);
+body {
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.7;
+  color: var(--color-white);
+  background: var(--color-bg);
 }
-.container{
-    width: var(--container-width-lg);
-    margin: 0  auto;
-    
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
 }
 
-section{
-    padding: 6rem 0 ;
+section {
+  padding: 6rem 0;
+}
+section h2 {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.2;
+}
+h1 {
+  font-size: 2.4rem;
+}
+h2 {
+  font-size: 2rm;
+}
+h3 {
+  font-size: 1.6rem;
+}
+h4 {
+  font-size: 1.3rem;
+}
+a {
+  /* color: var(--color-black); */
+  color: var(--color-bg2);
+  font-weight: bold;
+}
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+.btn {
+  display: inline-block;
+  background: var(--color-white);
 
-
+  color: var(--color-black);
+  padding: 1rem 2rem;
+  border: 1px solid transparent;
+  font-weight: 500;
+  transition: var(--transition);
 }
-section h2{
-    text-align: center;
-    margin-bottom: 4rem;
+.btn:hover {
+  background: transparent;
+  color: var(--color-white);
+  border-color: var(--color-white);
 }
-h1,h2,h3,h4,h5{
-    line-height: 1.2;
-}
-h1{
-    font-size: 2.4rem;
-}
-h2{
-    font-size: 2rm;
-}
-h3{
-    font-size: 1.6rem;
-}
-h4{
-    font-size: 1.3rem;
-}
-a{
-    color: var(--color-white);
-}
-img{
-    width: 100%;
-    display: block;
-    object-fit: cover;
-}
-.btn{
-    display: inline-block;
-    background: var(--color-white);
-
-    color: var(--color-black);
-    padding: 1rem 2rem ;
-    border: 1px solid transparent;
-    font-weight: 500;
-    transition: var(--transition);
-
-
-}
-.btn:hover{
-    background: transparent;
-    columns: var(--color-white);
-    border-color: var(--color-white);
-
-}
-.btn-primary{
-    background: var(--color-danger);
-    color: var(--color-white);
+.btn-primary {
+  background: var(--color-danger);
+  color: var(--color-white);
 }
 
 /* ========================= NAVBAR ================ */
-nav{
-    background:transparent ;
-    width:100vw;
-    height: 5rem;
-    position: fixed;
-    top: 0;
-    z-index: 11;
+nav {
+  background: hwb(228 97% 1% / 0.969);
+  width: 100vw;
+  height: 5rem;
+  position: fixed;
+  top: 0;
+  z-index: 11;
 }
-.nav_container{
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nav_container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-nav button{
-    display: none;
+nav button {
+  display: none;
 }
-.nav_menu{
-    display: flex;
-    align-items: center;
-    gap: 4rem;
+.nav_menu {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
-.nav_menu a{
-    font-size: 0.9rem;
-    transition: var(--transition);
+.nav_menu a {
+  font-size: 0.9rem;
+  transition: var(--transition);
 }
-.nav_menu a:hover{
-    color: var(--color-bg2);
+.nav_menu a:hover {
+  color: var(--color-black);
+  font-weight: bold;
+}
+.container .logo-science-coching {
+  width: 80px;
 }
 
 /* ========================= Header ================ */
 
 header {
-    position: relative;
-    top: 5rem;
-    overflow: hidden;
-    height: 70vh;
-    margin-bottom: 5rem;
+  position: relative;
+  top: 5rem;
+  overflow: hidden;
+  height: 70vh;
+  margin-bottom: 5rem;
 }
-.header_container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 5rem;
-    height: 100%;
+.header_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 5rem;
+  height: 100%;
 }
-.header_left{
-margin: 1rem 0 2.4rem ;
+.header_left {
+  margin: 1rem 0 2.4rem;
 }
-.header_left a{
-    margin-top: 30px;
+.header_left a {
+  margin-top: 30px;
+}
+.header_left p {
+  font-size: x-large;
+  margin-top: 20px;
 }
