--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,18 @@ footer ul li a:hover {
 .nav_menu li{
   width: 100%;
   height: 5.8rem;
+  animation: animateNavItems ls linear forwards;
 }
+
+@keyframes animateNavItems{
+0% {
+transform: rotateZ(-90deg);
+}
+100%{
+  transform: rotateZ(0);
+}
+} 
+
 
 .nav_menu li a{
   background: var(--color-primary);
@@ -442,3 +453,6 @@ footer ul li a:hover {
   color: var(--color-white);
 }
 }
+
+
+=================== 1:48 min
