--- a/css/style.css
+++ b/css/style.css
@@ -425,17 +425,41 @@ footer ul li a:hover {
 .nav_menu li{
   width: 100%;
   height: 5.8rem;
-  animation: animateNavItems ls linear forwards;
+  animation: animateNavItems 400ms linear forwards;
+  transform-origin: top right;
+}
+
+.nav_menu li:nth-child(2){
+  animation-delay: 200ms;
+}
+
+.nav_menu li:nth-child(3){
+  animation-delay: 400ms;
+}
+
+.nav_menu li:nth-child(4){
+  animation-delay: 600ms;
+}
+
+.nav_menu li:nth-child(5){
+  animation-delay: 800ms;
+}
+
+.nav_menu li:nth-child(6){
+  animation-delay: 1000ms;
 }
 
 @keyframes animateNavItems{
 0% {
-transform: rotateZ(-90deg);
+transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
 }
 100%{
-  transform: rotateZ(0);
+  transform: rotateZ(0) rotateX(0) scale(1);
+  opacity: 1;
+  
 }
 } 
+
 
 
 .nav_menu li a{
@@ -452,7 +476,139 @@ transform: rotateZ(-90deg);
   background: var(--color-bg2);
   color: var(--color-white);
 }
+
+
+/*     ==================NavBAR================ */
+
+header{
+  height: 52vh;
+  margin-bottom: 4rem;
+}
+.header_container{
+  gap: 0;
+  padding-bottom: 3rem;
+}
+
+/*     ==================Categories ================ */
+.categories{
+  height: auto ;
+}
+.categories_container{
+  grid-template-columns: 1fr;
+  gap: 3rem;
+  
+}
+
+.categories-left{
+  margin-right: 0;
+}
+
+/*     ================== Popular Courses ================ */
+
+.courses{
+  margin: 0;
+}
+.courses_container{
+  grid-template-columns: 1fr 1fr;
+}
+
+/*     ================== Frq ================ */
+
+.faqs_container{
+  grid-template-columns: 1fr;
+}
+
+.faq{
+  padding: 1.5rem;
+}
+
+/*     ================== Footer ================ */
+.footer_container{
+  grid-template-columns: 1fr 1fr;
+}
+
+}
+
+/* ===================== MOBILE MEDIA QUIERY ====================== */
+
+@media screen and (max-width: 600px) {
+  .container{
+    width: var(--container-width-sm);
+  }
+
+
+  /*     ==================NavBAR================ */
+.nav_menu{
+  right: 3%;
+
+}
+
+/*     ================== Header ================ */
+header{
+  height: 100vh;
+}
+
+.header_container{
+  grid-template-columns: 1fr;
+  text-align:center ;
+  margin-top: 0;
+}
+
+.header_left p{
+  margin-bottom: 1.3rem;
+
+}
+
+/*     ================== Categories ================ */
+
+.categories_right{
+  grid-template-columns: 1fr 1fr ;
+  gap: 0.7rem;
+
+}
+
+.category{
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.category_icon{
+margin-top: 4px;
+display: inline-block;
+}
+
+/*     ================== Popular Courses ================ */
+  
+.courses_container{
+  grid-template-columns: 1fr;
 }
 
 
-=================== 1:48 min
+/*     ================== testmonial ================ */
+
+
+.testimonial_body{
+  padding: 1.2rem;
+}
+
+/*     ================== footer ================ */
+
+.footer_container{
+  grid-template-columns: 1fr;
+  text-align: center;
+  gap: 2rem;
+
+}
+.footer-1 p{
+  margin: 1rem auto ;
+
+}
+.footer_socials{
+  justify-content: center;
+}
+
+}
+
+
+
+
