--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,29 @@
-/*     ================== Achievement ================ */
+
+
+:root {
+    --color-primary: #6c63ff;
+    --color-sucess: #00bf8e;
+    --color-warning: #f7c94b;
+    --color-danger: #f75842;
+    --color-primary-variant: rgba(247, 88, 66, 0.4);
+    --color-white: white;
+    --color-light: rgba(255, 255, 255, 0.7);
+    --color-black: black;
+    --color-bg: #1f2641;
+    --color-bg1: #2e3267;
+    --color-bg2: #424890;
+  
+    --container-width-lg: 76%;
+    --container-width-md: 90%;
+    --container-width-sm: 94%;
+  
+    --transition: all 400ms ease;
+  }
+
+
+  /*     ================== Achievement ================ */
+
+
 .about_achievements{
     margin-top: 3rem;
 
@@ -8,23 +33,119 @@
     grid-template-columns: 40% 60%;
     gap: 5rem;
 }
-.about_achievement-right{
+.about_achievement-right > p{
     margin: 1.6rem 0 2.5rem;
 
 }
+
 .achievements_cards{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1.5rem;
+    
 }
 .achievement_card{
-    background: var(--color-bg-1);  
+    background: var(--color-bg1);  
     padding: 1.6rem;
     border-radius: 1rem;
     text-align: center;
-    background-color: red;
+    transition: var(--transition);
+    
 }
 
-.achievement_card:hover{
-    background: var(bg2);
+ .achievement_card:hover{
+    background: var(--color-bg2);
+    /* cursor: pointer; */
+    box-shadow: 0 3rem 3rem rgba(0,0,0,0.3) ;
+} 
+.achivement_icon {
+    padding: 0.6rem;
+    background: var(--color-danger);
+    border-radius: 1rem;
+    display: inline-block;
+    margin-bottom: 1rem;
+    font-size: 1.5rem; 
+
+ } 
+ .achievement_card:nth-child(2) .achivement_icon{
+    background: var(--color-sucess);
+ }
+ 
+ .achievement_card:nth-child(3) .achivement_icon{
+    background: var(--color-primary);
+ }
+
+ .achievement_card p{
+    margin-top: 1rem;
+ }
+
+
+ /*     ================== END OF Achievement ================ */
+
+
+
+ /*     ================== Our Team ================ */
+
+ .team{
+    background: var(--color-bg1);
+    box-shadow: inset 0 0 3rem rgba(0,0,0,0.5) ;
+ }
+.team_container{
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    gap: 2rem;
 }
+.team_member{
+    background: var(--color-bg2);
+    padding: 2rem;
+    border: 1px solid transparent ;
+    transition: var(--transition);
+    position: relative;
+    overflow: hidden;
+    
+}
+.team_member:hover{
+    background:transparent ;
+    border-color: var(--color-primary);
+}
+.team_member-image img{
+    filter: saturate(0);
+}
+.team_member:hover  img{
+    filter: saturate(1);
+}
+
+.team_member-info *{
+    text-align: center;
+    margin-top: 1.4rem;
+}
+
+.team_member-info p{
+    color: var(--color-light);
+}
+
+.team_member-social{
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+right: -100%;
+display: flex;
+flex-direction: column;
+background: var(--color-primary);
+border-radius: 1rem 0 0 1rem;
+box-shadow: -2rem 0 2rem rgba(0,0,0,0.3) ;
+transition: var(--transition);
+}
+
+.team_member:hover .team_member-social{
+right: 0;
+}
+.team_member-social a{
+    padding: .8rem;
+}
+
+
+
+
+
+2:32
